# zed-quarto-extension

./: .gitignore  BRANCH_INFO.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBUG_THEME.md  LICENSE  LSP_STATUS.md  README.md  build.rs  codecov.yml  extension.toml  extension.toml.backup  fix-highlighting.sh  grammar-feature-needs.md  install-dev.sh  lcov.info  package-lock.json  package.json  patch-inline-grammar.sh  test-bold.md  test-bold.qmd  test-parse-inline.md
.claude/: settings.json
docs/: LSP_STATUS.md  NEXT_STEPS.md  README.md  TRIPLE_ASTERISK_ISSUE.md  citation-highlighting-issue.md  claude-hooks-setup.md  dollar-sign-issue.md  emphasis-delimiter-limitation.md  grammar-feature-needs.md  grammar-roadmap.md  highlighting-failure-analysis.md  language-grammar-requirements.md  lsp-status.md  manual-test-steps.md  migration-status-2025-10-18.md  next-steps.md  pandoc-extensions-scope-issue.md  publishing-to-zed-registry.md  reference-style-links-issue.md  scope-naming-decision.md  scope-reference.md  syntax-highlighting-architecture.md  table-parsing-limitation.md  tree-sitter-0.25-migration.md  tree-sitter-quarto-multi-editor-proposal.md  tree-sitter-quarto-plan.md  tree-sitter-quarto-update-2025-10-17-v2.md  update-to-28111dc-2025-10-18.md  update-to-acaaaff-summary.md  upstream-warnings.md  zed-query-loading-test-results.md  zed-syntax-scopes.md  zed-theme-scope-limitations.md
openspec/: project.md
src/: lib.rs
tests/: adjacent_emphasis_bug.rs  analyze_links.rs  bold_italic_highlighting_test.rs  citations.rs  cross_references.rs  dollar_sign_highlighting.rs  (+31 more)
(+197 files in other folders)
