[package]
name = "quarto-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "quarto_zed"

[dependencies]
serde_json = "1"
zed_extension_api = "0.7"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
which = "6"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
tree-sitter-highlight = "0.24.7"
tree-sitter = "0.24.7"
tree-sitter-markdown = { package = "tree-sitter-md", git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", tag = "v0.4.0", features = ["parser"] }
walkdir = "2"
toml = "0.8"
