[package]
name = "quarto-zed"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "quarto_zed"

[dependencies]
serde_json = "1"
zed_extension_api = "0.7"

[build-dependencies]
cc = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
tree-sitter-highlight = "0.25.10"
tree-sitter = "0.25.10"
walkdir = "2"
toml = "0.8"
regex = "1"
